add solution for 02-components 01-CounterButtonComponent

--- a/02-components/01-CounterButtonComponent/index.html
+++ b/02-components/01-CounterButtonComponent/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>CounterButtonComponent</title>
+  <title>CounterButton</title>
 </head>
 <body>
 
@@ -13,7 +13,7 @@
 </div>
 
 <script type="module">
-  import Vue from './vue.esm.browser.js';
+  import Vue from '/vendor/vue.esm.browser.js';
   import { CounterButton } from './CounterButton.js';
 
   const app = new Vue({
